css/main.css
html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
  background-color: whitesmoke;
}

p,
blockquote {
  font-size: 0.9em;
  line-height: 1.6em;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

i {
  transition: all 0.2s ease;
}

.fa-github,
.fa-linkedin {
  font-size: 50px;
  margin: auto;
  padding: 0 0.5em;
  margin-bottom: 2%;
  color: black;
}

.fa-github:hover,
.fa-linkedin:hover {
  transform: scale(1.1);
}

.preload {
  position: fixed;
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity 0.5s ease;
  background-color: whitesmoke;
  z-index: 4;
}

.preload-finish {
  opacity: 0;
  pointer-events: none;
}

.invisible-button {
  border-style: none;
  background-color: whitesmoke;
}

.container {
  text-align: center;
  padding: 0.8em 1.2em;
}

.logo {
  width: 100px;
}

header {
  display: flex;
  justify-content: space-between;
}

.menu {
  width: 25px;
  margin-top: 45%;
  float: right;
}

.hide-mobile {
  display: none;
}

.exit-btn {
  width: 50px;
}

.profile figure img {
  width: 50%;
  margin: auto auto 0.5em auto;
}

h1,
.subhead {
  position: relative;
  z-index: 3;
}

h1 {
  font-size: 2.5em;
}

.profile h1 {
  margin-top: 5px;
  font-size: 2.5em;
  font-family: "Comfortaa", cursive;
}

.subhead {
  margin-bottom: 2em;
}

.subhead-buttons {
  margin-bottom: 1rem;
}

.subhead-buttons a {
  margin: 0.6rem 0;
}

.work-container {
  position: relative;
  width: 100%;
  background: gainsboro;
  margin-top: 15%;
  padding: 1em 0 2em;
  border-top-left-radius: 40px;
  transform: skewY(-2deg);
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.work-container:before {
  content: "";
  width: 40px;
  height: 40px;
  background-color: gainsboro;
  position: absolute;
  top: -39px;
  right: 0;
  z-index: -2;
}

.work-container:after {
  content: "";
  width: 80px;
  height: 80px;
  background-color: whitesmoke;
  top: -80px;
  position: absolute;
  right: 0;
  border-radius: 50%;
  z-index: -2;
}

.work-container ul {
  transform: skewY(2deg);
}

.work-container h1 {
  transform: skewY(2deg);
  font-family: "Comfortaa", cursive;
}

.work-container ul li {
  margin: 0 auto 3em;
  padding: 0 0.5em;
}

.work-container figure img {
  width: 275px;
  margin-top: 1em;
  border-radius: 10px;
  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
    0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
    0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
    0 100px 80px rgba(0, 0, 0, 0.07);
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  overflow: visible;
}

figure {
  position: relative;
  margin: 0;
  padding: 0;
}

.work-container figure {
  width: 275px;
  margin: auto;
}

.left-work-btn {
  position: absolute;
  bottom: 50px;
  left: 15px;
}

.right-work-btn {
  position: absolute;
  bottom: 50px;
  right: 15px;
}

figure button {
  cursor: pointer;
  font-weight: bold;
  font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
  font-size: 0.8rem;
  outline: none;
  border: none;
  background-color: black;
  color: white;
  border-radius: 15px;
  width: 75px;
  height: 50px;
  transition: all 0.3s ease;
}

.work-container figure:hover img {
  filter: grayscale(0);
}

.work-list:hover figure:not(:hover) img {
  filter: grayscale(100%);
}

.skills-container {
  padding: 4em 0 2em;
  margin-top: -3%;
}

.skills-container ul li {
  margin: 0 auto 2em;
  width: 300px;
}

.skills-container h3 {
  font-family: "Comfortaa", cursive;
  font-size: 2em;
}

figcaption a {
  position: relative;
  text-decoration: none;
  color: black;
  font-weight: bold;
  font-size: 16px;
}

h2 {
  margin-top: 7%;
}

h3 {
  font-size: 1.6em;
}

.skills {
  font-size: 1em;
  text-align: left;
}

.specific-skills {
  font-weight: bold;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.cta {
  background: gainsboro;
  width: calc(100% - 1em);
  display: block;
  color: black;
  border-radius: 20px;
  padding: 1rem 0.5em;
  text-decoration: none;
  font-size: 1.2em;
  font-weight: bold;
  margin: 1% auto 1%;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.cta:hover {
  background: black;
  color: whitesmoke;
}

.footer-container {
  width: 100%;
  background: gainsboro;
  padding: 1.8em 0;
}

.my-email p:nth-child(1) {
  margin-top: 0;
}

ul.footer-links {
  margin: 0 auto;
}

ul.footer-links li {
  display: inline-block;
}

ul.footer-links li a {
  display: inline-block;
  font-size: 0.8em;
}

.my-email p a {
  color: black;
  text-decoration: none;
}

.my-email p a:hover {
  color: black;
}

nav ul {
  position: fixed;
  width: 40%;
  top: 0;
  right: 0;
  text-align: left;
  background: silver;
  height: 100%;
  z-index: 7;
  padding-top: 3em;
}

nav ul li a {
  color: white;
  text-decoration: none;
  display: block;
  width: 100%;
  background-color: silver;
  padding: 1em 2em;
  -webkit-transition: all 0.1s ease;
  transition: all 0.1s ease;
}

nav ul li a:hover {
  background-color: black;
}

.exit-btn {
  margin-bottom: 1em;
  margin-top: -1.3em;
  padding: 1em 2em;
}

.exit-btn img {
  width: 20px;
  cursor: pointer;
}

/*contact.html CSS*/
.contact-section {
  background: whitesmoke;
  padding: 80px;
}

.contact-section h1 {
  text-align: center;
  color: black;
  font-family: "Comfortaa", cursive;
}

.border {
  width: 100px;
  height: 10px;
  background: gainsboro;
  margin: 40px auto;
}

.contact-form {
  max-width: 600px;
  margin: auto;
  padding: 0 10px;
  overflow: hidden;
}

.name-form,
.email-form,
.message-form {
  display: block;
  width: 100%;
  box-sizing: border-box;
  margin: 16px 0;
  border: 0;
  background: #ebebeb;
  padding: 20px 40px;
  outline: none;
  color: black;
  font-family: montserrat;
  transition: 0.5s;
}
/* ... */

